# saysei-base

./: .gitignore  LICENSE  README.md  pyproject.toml
src/saysei_base/: __init__.py  main.py
tests/: test_main.py
