[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saysei-base"
version = "0.1.0"
description = "A brief description of saysei-base"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Bill O'Day", email = "billoday@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/billoday/saysei-base"
"Bug Tracker" = "https://github.com/billoday/saysei-base/issues"
